--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <!-- <li><a class="nav-link scrollto " href="#blog">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -63,9 +64,9 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li> -->
+          </li> 
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        </ul>
+        </ul> -->
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
@@ -73,7 +74,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/wall.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/wall3.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -165,7 +166,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Services Section ======= -->
-    <!-- <section id="services" class="services-mf pt-5 route">
+    <section id="services" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -174,7 +175,7 @@
                 Services
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                You think, we develop.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -184,44 +185,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Web Development</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
                 <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Photography</h2>
+                <h2 class="s-title">Visualizations</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  I can create charts for visualization of datasets with matplotlib, seaborn, plotly etc. for stock market, crypto or any datasets.
                 </p>
               </div>
             </div>
@@ -229,14 +198,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+                <span class="ico-circle"><i class="bi bi-laptop"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
+                <h2 class="s-title">Python Development</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Having rich experiance with python programming with many other modules like openCV, Django, BeautifulSoup4 etc.
                 </p>
               </div>
             </div>
@@ -244,14 +211,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
+                <span class="ico-circle"><i class="bi bi-keyboard"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
+                <h2 class="s-title">Django</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Have created some basic sites like stock market analysis with Python Django framework.
                 </p>
               </div>
             </div>
@@ -259,21 +224,45 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
+                <span class="ico-circle"><i class="bi bi-lightbulb-fill"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Marketing Services</h2>
+                <h2 class="s-title">Machine Learning</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  I can create basic machine learning models with new ideas and have some knowledge of data preparation, data analysis and training. 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-table"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Data Science</h2>
+                <p class="s-description text-center">
+                  Have done many projects and worked with datasetss with knowledge of python data science libraries like numpy, pandas, tensorflow etc.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-bookmark-fill"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Web Scraping</h2>
+                <p class="s-description text-center">
+                  I have knowledge of web scrapping and automation libraries in python like BeautifulSoup4 and selenium. I can scap data from sites and can careate datasets.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div> 
-    </section> -->
+    </section>
     <!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
