--- a/index.html
+++ b/index.html
@@ -739,6 +739,7 @@
                     <div class="socials">
                       <ul>
                         <li><a href="https://github.com/KD1903"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
+                        <li><a href="https://www.freelancer.com/u/DhruvKothiya"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href="https://linkedin.com/in/dhruvkothiya"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                         <li><a href="https://twitter.com/kothiya_dhruv"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                       </ul>
