--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/review.PNG" alt="" class="">
+                      <img src="assets/img/review.PNG" alt="" style="max-width: 100%;">
                       <span class="author"></span>
                     </div>
                     <div class="content-test">
@@ -530,7 +530,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/freelancer.PNG" alt="" class="">
+                      <img src="assets/img/freelancer.PNG" alt="" style="max-width: 100%;">
                       <span class="author"></span>
                     </div>
                     <div class="content-test">
