--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/email.php" method="post" role="form">
+                      <form action="https://mailto:dhruv12kothiya@gmail.com" method="POST" enctype="multipart/form-data">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
