--- a/index.html
+++ b/index.html
@@ -714,7 +714,8 @@
                           </div> -->
                           <div class="col-md-12 text-center">
                             <!-- <button type="submit" class="button button-a button-big button-rouded">Send Message</button> -->
-                            <button name="submit" class="button button-a button-big button-rouded" onClick="sendContact();">Send Message</button>
+                            <!-- <button name="submit" class="button button-a button-big button-rouded" onclick="sendContact();">Send Message</button> -->
+                            <input type="button" value="Send Message" class="button button-a button-big button-rouded" onclick="sendContact()">
                           </div>
                         </div>
                       <!-- </form> -->
