--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/images/images.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -115,7 +116,79 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>Python</span> <span class="pull-right">85%</span>
+                    <br>
+                    <div class="row">
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+                          <div class="overlay">
+                            <div class="text">Python</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-original.svg" />
+                          <div class="overlay">
+                            <div class="text">Django</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/arduino/arduino-original.svg" />
+                          <div class="overlay">
+                            <div class="text">IoT</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" /><br>
+                          <div class="overlay">
+                            <div class="text">C/C++</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                      </div>
+                    </div>
+                    <br><br>
+                    <div class="row">
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" />
+                          <div class="overlay">
+                            <div class="text">Pandas</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/numpy/numpy-original.svg" />
+                          <div class="overlay">
+                            <div class="text">Numpy</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/matlab/matlab-original.svg" />
+                          <div class="overlay">
+                            <div class="text">Matplotlib</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="container2">
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tensorflow/tensorflow-original.svg" />
+                          <div class="overlay">
+                            <div class="text">Tensorflow</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                      <!-- <span>Python</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -134,7 +207,7 @@
                     <span>IoT</span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <div class="col-md-6">
