--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <div class="service-content">
                 <h2 class="s-title">Django</h2>
                 <p class="s-description text-center">
-                  Have created some basic sites like stock market analysis with Python Django framework.
+                  Have created some basic sites like stock market analysis with Python Django framework and working on another project.
                 </p>
               </div>
             </div>
