--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <!-- End Counter Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="work" class="portfolio-mf sect-pt4 route">
+    <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -556,7 +556,7 @@
 
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
