--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Stock Market Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python Django</span>  <span class="w-date"></span>
+                      <span class="w-ctegory">Python Django</span> / <span class="w-category">Personal Project</span>
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
@@ -445,7 +445,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Bitcoin Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Matplotlib</span>  <span class="w-date"></span>
+                      <span class="w-ctegory">Matplotlib</span> / <span class="w-category">Chart Analysis</span>
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
@@ -469,7 +469,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">BPT Bands</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">R to Python</span>  <span class="w-date"></span>
+                      <span class="w-ctegory">R code to Python</span> / <span class="w-category">Freelancer</span>
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
