--- a/index.html
+++ b/index.html
@@ -339,18 +339,24 @@
     <!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
-    <!-- <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
+          <div class="title-box text-center">
+            <h3 style="color: white" class="title-a">
+              Certified Tutor on Course Hero
+            </h3>
+            <div class="line-mf"></div>
+          </div>
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">WORKS COMPLETED</span>
+                <p data-purecounter-start="0" data-purecounter-end="82" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">QUESTIONS ANSWERED</span>
               </div>
             </div>
           </div>
@@ -360,8 +366,8 @@
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">YEARS OF EXPERIENCE</span>
+                <p data-purecounter-start="0" data-purecounter-end="44" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">HELPFUL RATINGS</span>
               </div>
             </div>
           </div>
@@ -371,8 +377,8 @@
                 <span class="ico-circle"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="550" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">TOTAL CLIENTS</span>
+                <p data-purecounter-start="0" data-purecounter-end="213" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">CONTENT VIWES</span>
               </div>
             </div>
           </div>
@@ -382,14 +388,14 @@
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">AWARD WON</span>
+                <p data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">MONTHS OF EXPERIANCE</span>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- End Counter Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -818,7 +824,7 @@
                         <li><a href="https://github.com/KD1903"><span class="ico-circle"><i class="bi bi-github"></i><span class="tooltiptext">GitHub</span></span></a></li>
                         <li><a href="https://www.freelancer.com/u/DhruvKothiya"><span class="ico-circle"><i class="bi bi-laptop-fill"></i><span class="tooltiptext">Freelancer</span></span></a></li>
                         <li><a href="https://linkedin.com/in/dhruvkothiya"><span class="ico-circle"><i class="bi bi-linkedin"></i><span class="tooltiptext">LinkedIN</span></span></a></li><br><br><br>
-                        <li><a href="https://twitter.com/kothiya_dhruv"><span class="ico-circle"><i class="bi bi-twitter"></i><span class="tooltiptext">Twitter</span></span></a></li>
+                        <li><a href="https://www.coursehero.com//profile/dhruvkothiya107/"><span class="ico-circle"><i class="bi bi-bookmark-star-fill"></i><span class="tooltiptext">CourseHero</span></span></a></li>
                         <li><a href="https://www.hackerrank.com/DhruvKothiya"><span class="ico-circle"><i class="bi-cup-fill"></i><span class="tooltiptext">Hackerrank</span></span></a></li>
                         <li><a href="https://t.me/KD1903"><span class="ico-circle"><i class="bi-telegram"></i><span class="tooltiptext">Telegram</span></span></a></li>
                       </ul>
