--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
             <h3 style="color: white" class="title-a">
               Certified Tutor on Course Hero
             </h3>
+            <h5 class="subtitle-a">
+              <a href="https://www.coursehero.com//profile/dhruvkothiya107/" style="text-decoration: none; color: white">dhruvkothiya107</a>
+            </h5>
             <div class="line-mf"></div>
           </div>
           <div class="col-sm-3 col-lg-3">
