--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
@@ -102,13 +102,13 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/card.jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/kd.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Dhruv Kothiya</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Python Developer</span></p>
+                        <p><span class="title-s">Profession: </span> <span>Machine Learning Engineer</span></p>
                         <p><span class="title-s">Email: </span> <span>dhruv12kothiya@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>+91 72848 07026</span></p>
                       </div>
@@ -218,16 +218,13 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I'm Dhruv Kothiya, Certified Python Developer,
+                      I am Dhruv Kothiya, a Machine Learning engineer at Samyak Infotech Pvt Ltd, currently resides in Ahmedabad, Gujarat. I'm a techno freak that loves to learn about new technologies.
                     </p>
                     <p class="lead">
-                      I’m 20 years old developer from India,
-                      I am currently a student surviving with few skills which I developed over the years,
-                      I love learning about new things, and my curiosity has led me to learn Programming skills like Python, C/C++, IoT, Machine Learning, Data Science.
+                      As a result of my interest, I've developed expertise in areas like Deep Learning, Computer Vision, MLOps, Kubernetes, Docker, and many more.
                     </p>
                     <p class="lead">
-                      Hard Working and Highly Motivated Computer Science student with
-                      experience of many projects and good enough in Python with datasets and Visualizations. Seeking for internship opertunity.
+                      I've worked on a variety of projects, including extracting data from invoices, generating MCQs with GPT, people counting with the Jetson Nano, and extracting foreign languages from document.
                     </p>
                   </div>
                 </div>
