--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                       </div>
                       <div class="column">
                         <div class="container2">
-                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-original.svg" />
+                          <img class="image" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain-wordmark.svg" />
                           <div class="overlay">
                             <div class="text">Django</div>
                           </div>
@@ -218,13 +218,13 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am Dhruv Kothiya, a Machine Learning engineer at Samyak Infotech Pvt Ltd, currently resides in Ahmedabad, Gujarat. I'm a techno freak that loves to learn about new technologies.
+                      I am Dhruv Kothiya, currently working as a Solutions Engineer at NVIDIA, Bangalore. I'm a techno freak that loves to learn about new technologies.
                     </p>
                     <p class="lead">
-                      As a result of my interest, I've developed expertise in areas like Deep Learning, Computer Vision, MLOps, Kubernetes, Docker, and many more.
+                      As a result of my interest, I've developed expertise in areas like Deep Learning, Computer Vision, MLOps, Kubernetes, CI/CD, and many more.
                     </p>
                     <p class="lead">
-                      I've worked on a variety of projects, including extracting data from invoices, generating MCQs with GPT, people counting with the Jetson Nano, and extracting foreign languages from document.
+                      I've worked on a variety of projects, including Document Data Extraction, generating MCQs with GPT, people counting with the Jetson Nano, and extracting foreign languages from document.
                     </p>
                   </div>
                 </div>
