personal details change

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Dhruv Kothiya</span></p>
                         <p><span class="title-s">Profession: </span> <span>Machine Learning Engineer</span></p>
-                        <p><span class="title-s">Email: </span> <span>dhruv12kothiya@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>+91 72848 07026</span></p>
+                        <!-- <p><span class="title-s">Email: </span> <span>dhruv12kothiya@gmail.com</span></p> -->
+                        <!-- <p><span class="title-s">Phone: </span> <span>+91 72848 07026</span></p> -->
                       </div>
                     </div>
                   </div>
